<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="create">create</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="success">Success</string>
    <string name="not_yet">Coming Soon!!</string>
    <string name="not_found_voice_input">Not Found Recognize Speech Action.</string>
    <string name="japanese">Japanese</string>
    <string name="english">English</string>
    <string name="please_select">Please Select.</string>
    <string name="please_input">Please Input.</string>
    <string name="is_it_ok">Is it OK?</string>
    
    <!-- app common -->
    <string name="app_name">Hodgepodge Dictionary (JPN, ENG)</string>
    <string name="dict">Dictionary</string>
    <string name="search_history">Search History</string>
    <string name="voice_search">Voice Search</string>
    <string name="close_button">Close Button</string>
    <string name="back_button">Back Button</string>
    <string name="etc">etc.</string>
    <string name="url">URL</string>
    <string name="shorten_url">Shorten URL</string>
    <string name="page_title">Page Title</string>
    
    <!-- Site -->
    <string name="site_eijiro_m">EIJIRO Mobile - Space ALC</string>
    <string name="site_eijiro">EIJIRO - Space ALC</string>
    <string name="site_naver_ejje_m">Naver Mobile Eng-Jpn, Jpn-Eng</string>
    <string name="site_dictionarycom">Dictionary.com</string>
    <string name="site_free_dict">TheFreeDictionary</string>
    <string name="site_urban">Urban Dictionary</string>
    <string name="site_weblio">Weblio Dictionary</string>
    <string name="site_weblio_ejje">Weblio Eng-Jpn, Jpn-Eng</string>
    <string name="site_weblio_thesaurus">Weblio Thesaurus</string>
    <string name="site_yahoo">Yahoo! Dictionary</string>
    <string name="site_goo">Goo Dictionary</string>
    <string name="site_wiki_m_jp">Wikipedia (JP)</string>
    <string name="site_wiki_m_en">Wikipedia (EN)</string>
    
    <!-- Menu -->
    <string name="menu_tags">Tags</string>
    <string name="menu_select_copy">Copy Text</string>
    <string name="menu_search">Search</string>
    <string name="menu_page_info">Page Information</string>
    <string name="menu_share">Share</string>
    <string name="menu_share_url_open">Open URL</string>
    <string name="menu_share_url_share">Share Word, ClipBoard and URL</string>
    <string name="menu_share_evernote">Create Evernote</string>
    <string name="menu_share_message">Choose</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    
    <!-- Setting -->
    <string name="setting_last_selected_dict">Keep Latest Selection</string>
    <string name="setting_start_selected_dict">Select Startup Dictionary</string>
    <string name="setting_history_max_num">Search History Limit</string>
    <string name="setting_history_max_num_dtitle">Input Search History Limit(Max 99)</string>
    <string name="setting_history_clear">Clear Search History</string>
    <string name="setting_cbtn_exit">Exit App using Close Button</string>
    <string name="setting_cbtn_clear_search_history">Clear Search History using Close Button</string>
    <string name="setting_cbtn_clear_brows_history">Clear Browser History using Close Button</string>
    <string name="setting_cbtn_clear_brows_cash">Clear Brouser Cash using Close Button</string>
    <string name="setting_etc_feedback">Feed Back to Developer</string>
    <string name="setting_etc_feedback_summary">We would appreciate your thoughts and opinions.</string>
    
    
    
    <!-- Main -->
    <string name="retrieval_word">Word</string>
    <string name="search">Search</string>
    <string name="closed">Closed.</string>
    <string name="tag">Tag</string>
    <string name="goback">Go Back.</string>
    <string name="no_history">No History.</string>
    <string name="clear_history">Clear History</string>
    <string name="cleared_history">Cleared Histories.</string>
    <string name="cleared_brows_history">Cleared Internal Browser Histories.</string>
    <string name="cleared_brows_cach">Cleared Internal Browser Cashes.</string>
    
    <!-- Tag -->
    <string name="add_tags">Add Tags</string>
    <string name="add_tags_msg">Add Tags to the present web page.</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="apply_tags">Apply Tags</string>
    <string name="hint_new_tag">New Tag</string>
    <string name="not_found_tag">There are no Tags.</string>
    <string name="share_all">Share All</string>
    
    <!-- Voice Input -->
    <string name="jump_market_voice_input_app">Missing Voice Input Apps. Jump to Google Play?</string>
    
</resources>