<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/l_page_title_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_title" />

        <TextView
            android:id="@+id/l_url_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/url" />

        <TextView
            android:id="@+id/l_shorten_url_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/shorten_url" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/l_page_title_value"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/l_url_value"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center" />

        <EditText
            android:id="@+id/l_shorten_url_value"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center" />

    </LinearLayout>
    
</LinearLayout>